# docs/swagger.yaml
@@ -14,16 +14,17 @@ definitions:
     - id
     - status
     type: object
-  mentorsRoute.resGetProfile:
+  mentorsRoute.respGetMyStudent:
     properties:
       avatar_url:
         type: string
-      id:
-        type: string
       name:
         type: string
+      student_id:
+        type: string
     required:
-    - id
+    - name
+    - student_id
     type: object
   mentorsRoute.respGetRequest:
     properties:
@@ -34,6 +35,8 @@ definitions:
       id:
         type: string
       name:
+        type: string
+      status:
         type: string
       user_id:
         type: string
@@ -84,6 +87,8 @@ definitions:
       mentor_id:
         type: string
       mentor_name:
+        type: string
+      status:
         type: string
     type: object
   usersRoute.respGetMentor:
@@ -197,7 +202,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/mentorsRoute.resGetProfile'
+              $ref: '#/definitions/mentorsRoute.respGetMyStudent'
             type: array
       summary: Получить моих учеников
       tags:
